# airdrop-tracker

./: airdrops.json  main.py  models.py  pyproject.toml
src/: main.py  models.py  storage.py
src/airdrop_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/main.egg-info/: SOURCES.txt
