[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airdrop-tracker"
version = "0.1.0"
dependencies = ["typer", "pydantic", "rich"]

[project.scripts]
airdrop-tracker = "main:app"  # â† Kein src!

[project.optional-dependencies]
test = ["pytest"]
